added hero-img section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 </div>
                 <div class="dreams__box">
                     <div class="dreams__box-img dreams__box-img--right">
-                        <img src="/img/bora-bora-640.jpg" alt="Domki nad oceanem na tle góry" class="dreams__img">
+                        <img src="/img/bora-bora-640.jpg" sizes="(min-width: 1000px)" srcset="/img/bora-bora-1920.jpg"
+                            alt="Domki nad oceanem na tle góry" class="dreams__img">
                     </div>
                     <div class="dreams__box-text dreams__box-text--right">
                         <h3 class="dreams__title">Niezapomniane przygody</h3>
@@ -65,6 +66,15 @@
 
                 </div>
             </div>
+        </section>
+
+        <section class="hero-img section">
+            <div class="white-block white-block-left"></div>
+            <div class="white-block white-block-right"></div>
+            <p class="hero-img__title">Tropical Paradise</p>
+            <hr>
+            <p class="hero-img__text">Jedyne takie miejsce na ziemi</p>
+            <hr>
         </section>
     </main>
 
