--- a/index.html
+++ b/index.html
@@ -76,6 +76,72 @@
             <p class="hero-img__text">Jedyne takie miejsce na ziemi</p>
             <hr>
         </section>
+
+        <section class="islands section-padding section white-section" id="islands">
+            <h2 class="section-heading">Polecane Wyspy</h2>
+            <div class="islands__cards"></div>
+
+            <div class="islands__card" onclick="void(0)">
+
+                <div class="islands__card-img islands__card-img--first">
+                    <h3 class="islands__card-img-title">Wyspa Tiki Taki</h3>
+                    <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
+                </div>
+
+
+                <div class="islands__card-info">
+                    <h3 class="islands__card-info-title">Wyspa Tiki Taki</h3>
+                    <ul class="islands__card-info-list">
+                        <li class="islands__card-info-list-item">Piękna okolica</li>
+                        <li class="islands__card-info-list-item">Ciepła woda</li>
+                        <li class="islands__card-info-list-item">Czyste plaże</li>
+                        <li class="islands__card-info-list-item">Eksluzywny bar</li>
+                        <li class="islands__card-info-list-item">Wysokie palmy</li>
+                    </ul>
+                    <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
+                </div>
+            </div>
+            <div class="islands__card" onclick="void(0)">
+
+                <div class="islands__card-img islands__card-img--second">
+                    <h3 class="islands__card-img-title">Wyspa Toca Toca</h3>
+                    <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
+                </div>
+
+
+                <div class="islands__card-info">
+                    <h3 class="islands__card-info-title">Wyspa Toca toca</h3>
+                    <ul class="islands__card-info-list">
+                        <li class="islands__card-info-list-item">Piękna okolica</li>
+                        <li class="islands__card-info-list-item">Ciepła woda</li>
+                        <li class="islands__card-info-list-item">Czyste plaże</li>
+                        <li class="islands__card-info-list-item">Eksluzywny bar</li>
+                        <li class="islands__card-info-list-item">Wysokie palmy</li>
+                    </ul>
+                    <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
+                </div>
+            </div>
+            <div class="islands__card" onclick="void(0)">
+
+                <div class="islands__card-img islands__card-img--third">
+                    <h3 class="islands__card-img-title">Wyspa Nobu</h3>
+                    <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
+                </div>
+
+
+                <div class="islands__card-info">
+                    <h3 class="islands__card-info-title">Wyspa Nobu</h3>
+                    <ul class="islands__card-info-list">
+                        <li class="islands__card-info-list-item">Piękna okolica</li>
+                        <li class="islands__card-info-list-item">Ciepła woda</li>
+                        <li class="islands__card-info-list-item">Czyste plaże</li>
+                        <li class="islands__card-info-list-item">Eksluzywny bar</li>
+                        <li class="islands__card-info-list-item">Wysokie palmy</li>
+                    </ul>
+                    <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
+                </div>
+            </div>
+        </section>
     </main>
 
 
