--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h2 class="section-heading">Spełniaj marzenia</h2>
                 <div class="dreams__box">
                     <div class="dreams__box-img">
-                        <img src="/img/paradise-640.jpg" alt="Domki nad oceanem" class="dreams__img">
+                        <img src="./img/paradise-640.jpg" alt="Domki nad oceanem" class="dreams__img">
                     </div>
                     <div class="dreams__box-text">
                         <h3 class="dreams__title">Wymarzone wakacje</h3>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="dreams__box">
                     <div class="dreams__box-img dreams__box-img--right">
-                        <img src="/img/bora-bora-640.jpg" sizes="(min-width: 1000px)" srcset="/img/bora-bora-1920.jpg"
+                        <img src="./img/bora-bora-640.jpg" sizes="(min-width: 1000px)" srcset="/img/bora-bora-1920.jpg"
                             alt="Domki nad oceanem na tle góry" class="dreams__img">
                     </div>
                     <div class="dreams__box-text dreams__box-text--right">
@@ -79,66 +79,118 @@
 
         <section class="islands section-padding section white-section" id="islands">
             <h2 class="section-heading">Polecane Wyspy</h2>
-            <div class="islands__cards"></div>
+            <div class="islands__cards">
 
-            <div class="islands__card" onclick="void(0)">
+                <div class="islands__card" onclick="void(0)">
 
-                <div class="islands__card-img islands__card-img--first">
-                    <h3 class="islands__card-img-title">Wyspa Tiki Taki</h3>
-                    <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
+                    <div class="islands__card-img islands__card-img--first">
+                        <h3 class="islands__card-img-title">Wyspa Tiki Taki</h3>
+                        <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
+                    </div>
+
+
+                    <div class="islands__card-info">
+                        <h3 class="islands__card-info-title">Wyspa Tiki Taki</h3>
+                        <ul class="islands__card-info-list">
+                            <li class="islands__card-info-list-item">Piękna okolica</li>
+                            <li class="islands__card-info-list-item">Ciepła woda</li>
+                            <li class="islands__card-info-list-item">Czyste plaże</li>
+                            <li class="islands__card-info-list-item">Eksluzywny bar</li>
+                            <li class="islands__card-info-list-item">Wysokie palmy</li>
+                        </ul>
+                        <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
+                    </div>
                 </div>
+                <div class="islands__card" onclick="void(0)">
+
+                    <div class="islands__card-img islands__card-img--second">
+                        <h3 class="islands__card-img-title">Wyspa Toca Toca</h3>
+                        <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
+                    </div>
 
 
-                <div class="islands__card-info">
-                    <h3 class="islands__card-info-title">Wyspa Tiki Taki</h3>
-                    <ul class="islands__card-info-list">
-                        <li class="islands__card-info-list-item">Piękna okolica</li>
-                        <li class="islands__card-info-list-item">Ciepła woda</li>
-                        <li class="islands__card-info-list-item">Czyste plaże</li>
-                        <li class="islands__card-info-list-item">Eksluzywny bar</li>
-                        <li class="islands__card-info-list-item">Wysokie palmy</li>
-                    </ul>
-                    <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
+                    <div class="islands__card-info">
+                        <h3 class="islands__card-info-title">Wyspa Toca toca</h3>
+                        <ul class="islands__card-info-list">
+                            <li class="islands__card-info-list-item">Piękna okolica</li>
+                            <li class="islands__card-info-list-item">Ciepła woda</li>
+                            <li class="islands__card-info-list-item">Czyste plaże</li>
+                            <li class="islands__card-info-list-item">Eksluzywny bar</li>
+                            <li class="islands__card-info-list-item">Wysokie palmy</li>
+                        </ul>
+                        <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
+                    </div>
+                </div>
+                <div class="islands__card" onclick="void(0)">
+
+                    <div class="islands__card-img islands__card-img--third">
+                        <h3 class="islands__card-img-title">Wyspa Nobu</h3>
+                        <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
+                    </div>
+
+
+                    <div class="islands__card-info">
+                        <h3 class="islands__card-info-title">Wyspa Nobu</h3>
+                        <ul class="islands__card-info-list">
+                            <li class="islands__card-info-list-item">Piękna okolica</li>
+                            <li class="islands__card-info-list-item">Ciepła woda</li>
+                            <li class="islands__card-info-list-item">Czyste plaże</li>
+                            <li class="islands__card-info-list-item">Eksluzywny bar</li>
+                            <li class="islands__card-info-list-item">Wysokie palmy</li>
+                        </ul>
+                        <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
+                    </div>
                 </div>
             </div>
-            <div class="islands__card" onclick="void(0)">
+        </section>
 
-                <div class="islands__card-img islands__card-img--second">
-                    <h3 class="islands__card-img-title">Wyspa Toca Toca</h3>
-                    <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
-                </div>
+        <section class="offers section-padding section" id="offers">
+
+            <div class="white-block white-block-right"></div>
+            <div class="white-block white-block-left"></div>
+
+            <h2 class="section-heading">Oferty</h2>
+            <div class="wrapper">
+
+                <div class="offers__box">
+
+                    <div class="offers__option">
+                        <img src="./img/beach-640.jpg" alt="Plaża, wino i stolik."
+                            class="offers__option-img offers__option-img--right">
+                        <div class="offers__option-info">
+                            <h3 class="offers__option-heading">Romantyczny wieczór</h3>
+                            <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Repellat dolore dolor sit velit ratione quibusdam provident asperiores corrupti
+                                deleniti. Odit.</p>
+                            <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="offers__option-btn btn-special-animation">Wybierz</button>
+                        </div>
+                    </div>
+                    <div class="offers__option">
+                        <img src="./img/bubbles-640.jpg" alt="Tłum ludzi na plaży puszczających bańki"
+                            class="offers__option-img">
+                        <div class="offers__option-info">
+                            <h3 class="offers__option-heading">Wypad z przyjaciółmi</h3>
+                            <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Repellat dolore dolor sit velit ratione quibusdam provident asperiores corrupti
+                                deleniti. Odit.</p>
+                            <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="offers__option-btn btn-special-animation">Wybierz</button>
+                        </div>
+                    </div>
+                    <div class="offers__option">
+                        <img src="./img/campfire-640.jpg" alt="Ognisko na plaży" class="offers__option-img">
+                        <div class="offers__option-info">
+                            <h3 class="offers__option-heading">Wypad z rodzina nad wodę</h3>
+                            <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Repellat dolore dolor sit velit ratione quibusdam provident asperiores corrupti
+                                deleniti. Odit.</p>
+                            <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="offers__option-btn btn-special-animation">Wybierz</button>
+                        </div>
+                    </div>
 
 
-                <div class="islands__card-info">
-                    <h3 class="islands__card-info-title">Wyspa Toca toca</h3>
-                    <ul class="islands__card-info-list">
-                        <li class="islands__card-info-list-item">Piękna okolica</li>
-                        <li class="islands__card-info-list-item">Ciepła woda</li>
-                        <li class="islands__card-info-list-item">Czyste plaże</li>
-                        <li class="islands__card-info-list-item">Eksluzywny bar</li>
-                        <li class="islands__card-info-list-item">Wysokie palmy</li>
-                    </ul>
-                    <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
-                </div>
-            </div>
-            <div class="islands__card" onclick="void(0)">
-
-                <div class="islands__card-img islands__card-img--third">
-                    <h3 class="islands__card-img-title">Wyspa Nobu</h3>
-                    <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Wiecej informacji</p>
-                </div>
-
-
-                <div class="islands__card-info">
-                    <h3 class="islands__card-info-title">Wyspa Nobu</h3>
-                    <ul class="islands__card-info-list">
-                        <li class="islands__card-info-list-item">Piękna okolica</li>
-                        <li class="islands__card-info-list-item">Ciepła woda</li>
-                        <li class="islands__card-info-list-item">Czyste plaże</li>
-                        <li class="islands__card-info-list-item">Eksluzywny bar</li>
-                        <li class="islands__card-info-list-item">Wysokie palmy</li>
-                    </ul>
-                    <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
                 </div>
             </div>
         </section>
