added reviews section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tropical Paradise </title>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://kit.fontawesome.com/83a7c88504.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/83a7c88504.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
@@ -155,8 +156,7 @@
                 <div class="offers__box">
 
                     <div class="offers__option">
-                        <img src="./img/beach-640.jpg" alt="Plaża, wino i stolik."
-                            class="offers__option-img offers__option-img--right">
+                        <img src="./img/beach-640.jpg" alt="Plaża, wino i stolik." class="offers__option-img ">
                         <div class="offers__option-info">
                             <h3 class="offers__option-heading">Romantyczny wieczór</h3>
                             <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -168,7 +168,7 @@
                     </div>
                     <div class="offers__option">
                         <img src="./img/bubbles-640.jpg" alt="Tłum ludzi na plaży puszczających bańki"
-                            class="offers__option-img">
+                            class="offers__option-img offers__option-img--right">
                         <div class="offers__option-info">
                             <h3 class="offers__option-heading">Wypad z przyjaciółmi</h3>
                             <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -194,9 +194,52 @@
                 </div>
             </div>
         </section>
+
+        <section class="reviews section-padding section white-section" id="reviews">
+            <h2 class="section-heading">Opinie</h2>
+            <div class="wrapper">
+                <div class="reviews__boxes">
+                    <div class="reviews__box">
+                        <div class="reviews__box-img"><img src="./img/people_1-640.jpg" alt="Anna Nowak"></div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Assumenda dolores provident perspiciatis ratione debitis culpa impedit blanditiis earum
+                                quia quam!
+                            </p>
+                            <strong>Anna Nowak</strong>
+                        </div>
+                    </div>
+                    <div class="reviews__box">
+                        <div class="reviews__box-img"><img src="./img/people_2-640.jpg" alt="Jan Kowalski"></div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Assumenda dolores provident perspiciatis ratione debitis culpa impedit blanditiis earum
+                                quia quam!
+                            </p>
+                            <strong>Jan Kowalski</strong>
+                        </div>
+                    </div>
+                    <div class="reviews__box">
+                        <div class="reviews__box-img"><img src="./img/people_3-640.jpg" alt="Maja Wiśniewska"></div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Assumenda dolores provident perspiciatis ratione debitis culpa impedit blanditiis earum
+                                quia quam!
+                            </p>
+                            <strong>Maja Wiśniewska</strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
-
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/slick.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
