--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                 </div>
                 <div class="dreams__box">
                     <div class="dreams__box-img dreams__box-img--right">
-                        <img src="./img/bora-bora-640.jpg" sizes="(min-width: 1000px)" srcset="/img/bora-bora-1920.jpg"
-                            alt="Domki nad oceanem na tle góry" class="dreams__img">
+                        <img src="./img/bora-bora-640.jpg" alt="Domki nad oceanem na tle góry" class="dreams__img">
                     </div>
                     <div class="dreams__box-text dreams__box-text--right">
                         <h3 class="dreams__title">Niezapomniane przygody</h3>
@@ -235,6 +234,31 @@
                 </div>
             </div>
         </section>
+
+        <section class="contact section-padding section white-section" id="contakt">
+            <div class="white-block white-block-left"></div>
+            <div class="white-block white-block-right"></div>
+
+            <h2 class="section-heading">Kontakt</h2>
+
+            <div class="wrapper">
+                <form class="contact__form">
+                    <div class="contact__form-top">
+                        <label for="name" class="contact__form-label">Imię i nazwisko:</label>
+                        <input type="text" class="contact__form-input" id="name">
+
+                        <label for="email" class="contact__form-label">Adres e-mail:</label>
+                        <input type="text" class="contact__form-input" id="email">
+                    </div>
+                    <label for="msg" class="contact__form-label">Wiadomość:</label>
+                    <textarea class="contact__form-textarea" id="msg"></textarea>
+
+                    <button type="submit" class="contact__form-btn btn-special-animation">Wyślij</button>
+                </form>
+            </div>
+        </section>
+
+
 
 
     </main>
